Hardcoded sizeHint is not a good idea. Calculate the proper size using the icon, title and description.

This moves the private variables from paint() into the class so they can be shared between paint() and sizeHint() to reduce duplication.

BUG:151304
CCMAIL:kde-games-devel@kde.org

svn path=/trunk/KDE/kdegames/ksudoku/; revision=731565